Client update endpoints WIP.
